# Intel

./: CMakeLists.txt  README.md  package.xml
config/: caster.yaml  diffdrive.yaml  gazebo_controllers.yaml  joints.yaml
include/: CSVreader.h  experiment.h
launch/: gazebo.launch  intel_robot.launch
meshes/: back_caster.dae  base_link.dae  front_caster.dae  left_wheel.dae  right_wheel.dae  top_link.dae
models/platform/: model.config  model.sdf
rviz/: urdf.rviz
src/: exp.cpp  vel.cpp
urdf/: intel_robot.urdf  intel_robot.urdf.xacro  relay.urdf.xacro
worlds/: world.world
